# hunter

./: .travis.yml  README.rst  index.md  jenkins.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  set_matrix.py
.github/workflows/ci/: build.py  matrix.json
_data/projects/: Alut.json  Assimp.json  Boost-charconv.json  Boost-chrono-useBoostConfig.json  Boost-chrono.json  Boost-useBoostConfig.json  Boost.json  CLI11.json  CURL.json  Eigen.json  GTest.json  Imath.json  Jpeg.json  LLVM.json  OpenAL.json  OpenBLAS.json  OpenCL-cpp.json  OpenCV-Extra.json  OpenCV.json  OpenEXR.json  OpenJPH.json  OpenSSL.json  PNG.json  SDL2.json  SDL_net.json  SuiteSparse.json  TIFF.json  WebP.json  ZLIB.json  abseil.json  asio-grpc.json  asio.json  aws-sdk-cpp.json  benchmark.json  brotli.json  ceres-solver.json  check_urls.json  civetweb.json  date.json  doctest.json  (+36 more)
cmake/configs/: default.cmake
cmake/find/: FindOpenSSL.cmake  Findlibbacktrace.cmake
cmake/modules/: hunter_calculate_config_sha1.cmake  hunter_calculate_toolchain_sha1.cmake  hunter_download.cmake  hunter_finalize.cmake  hunter_get_boost_libs.cmake  hunter_initialize.cmake  hunter_pack_git_submodule.cmake  hunter_pkgconfig_export_target.cmake  hunter_set_config_location.cmake  hunter_setup_msvc.cmake
cmake/projects/Assimp/: hunter.cmake
cmake/projects/BZip2/: hunter.cmake
cmake/projects/Banking/: hunter.cmake
cmake/projects/Boost/: generate.sh  hunter.cmake
cmake/projects/Catch/: hunter.cmake
cmake/projects/Eigen/: hunter.cmake
cmake/projects/Expat/: hunter.cmake
cmake/projects/FLAC/: hunter.cmake
cmake/projects/FreeGLUT/: hunter.cmake
cmake/projects/GTest/: hunter.cmake
cmake/projects/HiRedis/: hunter.cmake
cmake/projects/IlmBase/: hunter.cmake
cmake/projects/Imath/: hunter.cmake
cmake/projects/Jpeg/: hunter.cmake
cmake/projects/KTX-Software/: hunter.cmake
cmake/projects/Lager/: hunter.cmake
cmake/projects/NASM/: hunter.cmake
cmake/projects/OpenBLAS/: hunter.cmake
cmake/projects/OpenCL/: hunter.cmake
cmake/projects/OpenCV/: hunter.cmake
cmake/projects/OpenJPH/: hunter.cmake
cmake/projects/OpenSSL/: hunter.cmake
cmake/projects/OpenSceneGraph/: hunter.cmake
cmake/projects/PocoCpp/: hunter.cmake
cmake/projects/Protobuf/: hunter.cmake
cmake/projects/Qt/: hunter.cmake
cmake/projects/Redis++/: hunter.cmake
cmake/projects/SDL2/: hunter.cmake
cmake/projects/SPIRV-Tools/: hunter.cmake
cmake/projects/SWIG/: hunter.cmake
cmake/projects/SuiteSparse/: hunter.cmake
cmake/projects/TIFF/: hunter.cmake
cmake/projects/Vulkan-Headers/: hunter.cmake
cmake/projects/WasmEdge/: hunter.cmake
cmake/projects/Zug/: hunter.cmake
cmake/projects/asio/: hunter.cmake
cmake/projects/asio-grpc/: hunter.cmake
cmake/projects/astc-encoder/: hunter.cmake
cmake/projects/aws-sdk-cpp/: hunter.cmake
cmake/projects/basis_universal/: hunter.cmake
cmake/projects/cgltf/: hunter.cmake
cmake/schemes/: url_sha1_zlog.cmake.in
docs/: contributing.rst
docs/old-wiki/: dev.hunter.root.md
docs/overview/: what-is-it.rst
docs/quick-start/: boost-components.rst  cmake.rst
docs/user-guides/: cmake-user.rst
examples/Banking/: CMakeLists.txt
examples/Boost/: CMakeLists.txt
examples/Boost-charconv/: CMakeLists.txt  foo.cpp
examples/Boost-chrono/: CMakeLists.txt
examples/Boost-cobalt/: CMakeLists.txt
examples/Boost-contract/: CMakeLists.txt
examples/Boost-fiber/: CMakeLists.txt
examples/Boost-filesystem/: CMakeLists.txt
examples/Boost-iostreams/: CMakeLists.txt
examples/Boost-log/: CMakeLists.txt
examples/Boost-log-shared/: CMakeLists.txt
examples/Boost-math/: CMakeLists.txt
examples/Boost-predef/: CMakeLists.txt
examples/Boost-process/: CMakeLists.txt  foo.cpp
examples/Boost-program-options/: CMakeLists.txt
examples/Boost-python/: CMakeLists.txt  config.cmake
examples/Boost-python-numpy/: CMakeLists.txt  config.cmake
examples/Boost-random/: CMakeLists.txt
examples/Boost-redis/: CMakeLists.txt  foo.cpp
examples/Boost-serialization/: CMakeLists.txt
examples/Boost-stacktrace/: CMakeLists.txt
examples/Boost-system/: CMakeLists.txt
examples/Boost-test/: CMakeLists.txt
examples/Boost-thread/: CMakeLists.txt
examples/Boost-uuid/: CMakeLists.txt
examples/FreeGLUT/: CMakeLists.txt  boo.cpp
examples/HiRedis/: CMakeLists.txt  main.cpp
examples/Lager/: CMakeLists.txt  boo.cpp
examples/OpenCL/: main.cpp
examples/OpenCL-Headers/: CMakeLists.txt
examples/OpenCL-cpp/: CMakeLists.txt  main.cpp
examples/OpenJPH/: CMakeLists.txt
examples/Redis++/: CMakeLists.txt  main.cpp
examples/SPIRV-Tools/: config.cmake
examples/SWIG/: CMakeLists.txt  boo.cpp
examples/TIFF/: main.c
examples/Zug/: CMakeLists.txt
examples/asio-grpc/: CMakeLists.txt  boo.cpp
examples/aws-sdk-cpp/: CMakeLists.txt
examples/cpp-statsd-client/: CMakeLists.txt
examples/cppast/: CMakeLists.txt
examples/cppfs/: CMakeLists.txt
examples/dfdutils/: boo.cpp
examples/eyalroz_printf/: CMakeLists.txt  config.cmake  main.c
examples/hypre/: CMakeLists.txt
examples/immer/: CMakeLists.txt
examples/ittapi/: boo.cpp
examples/jwt-cpp/: main.cpp
examples/lager/: CMakeLists.txt
examples/libarchive/: CMakeLists.txt  boo.cpp
examples/libbacktrace/: CMakeLists.txt
examples/libp2p/: CMakeLists.txt  main.cpp
examples/libuv/: CMakeLists.txt
examples/meshoptimizer/: CMakeLists.txt  boo.cpp
examples/msgpack/: CMakeLists.txt
examples/ned14-internal-quickcpplib/: CMakeLists.txt  foo.cpp
examples/oneTBB/: CMakeLists.txt
examples/pthreads-win32/: boo.cpp
examples/restinio/: CMakeLists.txt  foo.cpp
examples/scelta/: CMakeLists.txt
examples/tcmalloc/: CMakeLists.txt  boo.cpp
examples/tiny-process-library/: CMakeLists.txt
examples/tinyrefl/: CMakeLists.txt  boo.cpp
examples/vurtun-lib/: CMakeLists.txt
examples/yaml-cpp/: CMakeLists.txt
examples/zlog/: boo.c
maintenance/: check-urls.py  convert_wiki.py  docs_create_missing_stubs.py
tests/hunter_setup_msvc/: CMakeLists.txt
(+73 files in other folders)
